feat(kafka-container) Add kafka testing and notebook connections

--- a/.env
+++ b/.env
@@ -13,4 +13,12 @@ DIBIMBING_DE_SPARK_DRIVER=org.postgresql.Driver
 DIBIMBING_DE_SPARK_STRINGTYPE=unspecified
 DIBIMBING_DE_SPARK_TRANSFORMER_SQL=/challenge_spark/spark_transform.sql
 
+DIBIMBING_DE_ZOOKEPER_HOST=dibimbing-dataeng-zookeper
+DIBIMBING_DE_ZOOKEPER_CONTAINER_NAME=dibimbing-dataeng-zookeper
+
+DIBIMBING_DE_KAFKA_CONTAINER_NAME=dibimbing-dataeng-kafka
+DIBIMBING_DE_KAFKA_HOST=dibimbing-dataeng-kafka
+DIBIMBING_DE_KAFKA_TOPIC_NAME=dibimbing-test-topic
+DIBIMBING_DE_KAFKA_REPLICATION=1
+
 DIBIMBING_DE_JUPYTER_PORT=9999
